# vc-scis2025

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
app/: Cargo.toml
app/src/: utils.rs
app/tests/: kzg_e2e.rs  merkle_e2e.rs  verkle_e2e.rs
contracts/: foundry.toml
contracts/src/: Curve.sol  Field.sol  KZGVerifier.sol  MerkleVerifier.sol  VerkleVerifier.sol
contracts/test/: VerkleVerifier.t.sol
kzg/: Cargo.toml  README.md
kzg/src/: data_structures.rs  kzg.rs  lib.rs  main.rs  multipoint.rs  multiproof.rs
kzg/tests/: multipoint.rs  multiproof.rs
merkle/: Cargo.toml
merkle/src/: tree.rs
scripts/: merkle_e2e.sh  merkle_verify.sh  plot_combined.py  plot_combined_ps.py  plot_merkle.py  plot_verkle.py  verkle_e2e.sh  verkle_verify.sh
verkle/: Cargo.toml
verkle/src/: data_structures.rs  lib.rs  tree.rs
