[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kzg-commitment.workspace = true
foundry-contracts.workspace = true
verkle-tree.workspace = true
merkle-tree.workspace = true
rand = "0.8.5"
eyre = "0.6"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
ark-std = "0.5.0"
keccak-asm = "0.1.4"
itertools = "0.13.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
alloy = { git = "https://github.com/alloy-rs/alloy", features = [
    "providers",
    "node-bindings",
] }
